tests/errors/compiler/decl_and_def_have_diff_type/float_decl_int_def.c
float fun();

int main()
{
	fun();
	return 0;
}

int fun()
{

}
